<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="#FAF3F3"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="8dp"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnSave2"
            android:background="@drawable/buttons"
            android:textColor="#1A237E"
            android:text="@string/save"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="end">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnCancel2"
                android:background="@drawable/buttons"
                android:textColor="#1A237E"
                android:text="@string/cancel"/>

        </LinearLayout>

    </LinearLayout>

    <ScrollView
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:id="@+id/activity_write_post"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:orientation="vertical">

            <EditText
                android:id="@+id/etRecipeName2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name_of_the_recipe"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:maxLines="1"/>

            <EditText
                android:id="@+id/etOrigin2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/origin"
                android:maxLines="1"/>

            <EditText
                android:id="@+id/etIngredients2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ingredients"
                android:maxLines="4"/>

            <EditText
                android:id="@+id/etSteps2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/steps"
                android:maxLines="6"/>


        </LinearLayout>
    </ScrollView>
</LinearLayout>