<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="#FAF3F3"
    android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="end">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnExit"
                android:background="@drawable/buttons"
                android:textColor="#1A237E"
                android:text="@string/exit"/>

        </LinearLayout>


    <ScrollView
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:id="@+id/activity_write_post"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:orientation="vertical">

            <EditText
                android:id="@+id/etRecipeName3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name_of_the_recipe"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:maxLines="1"/>

            <EditText
                android:id="@+id/etOrigin3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/origin"
                android:clickable="false"
                android:maxLines="1"/>

            <EditText
                android:id="@+id/etIngredients3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ingredients"
                android:clickable="false"
                android:maxLines="4"/>

            <EditText
                android:id="@+id/etSteps3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/steps"
                android:clickable="false"
                android:maxLines="6"/>


        </LinearLayout>
    </ScrollView>
</LinearLayout>